--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   google_fonts: ^2.0.0
   provider: ^5.0.0
   intl_phone_number_input: ^0.7.0+2
+  firebase_storage: ^8.1.1
+  flutter_svg: ^0.22.0
+  image_picker: ^0.8.0+1
 
 dev_dependencies:
   flutter_test:
