--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^8.1.1
   flutter_svg: ^0.22.0
   image_picker: ^0.8.0+1
+  dotted_border: ^2.0.0
 
 dev_dependencies:
   flutter_test:
