--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^0.22.0
   image_picker: ^0.8.0+1
   dotted_border: ^2.0.0
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
