--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^0.8.0+1
   dotted_border: ^2.0.0
   flutter_masked_text: ^0.8.0
+  carousel_pro: ^1.0.0
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
