--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_masked_text: ^0.8.0
   carousel_pro: ^1.0.0
   url_launcher: ^6.0.6
+  flutter_native_image: ^0.0.6
 
 dev_dependencies:
   flutter_test:
