--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   carousel_pro: ^1.0.0
   url_launcher: ^6.0.6
   flutter_native_image: ^0.0.6
+  flutter_sms: ^2.3.1
+  maps_launcher: ^2.0.0
 
 dev_dependencies:
   flutter_test:
